--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,5 @@
 .App {
   background: rgb(255, 255, 255);
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-}
-
-.card {
-  background-color: rgb(61, 135, 255);
-  padding: 1rem;
-  width: 180px;
-  height: 180px;
-  border-radius: 20%;
 }
 
 .header-container {
@@ -20,4 +7,29 @@
   padding: 2rem;
   margin: 5px 1rem;
   font-size: 1.5rem;
+}
+
+.card-container {
+  background-color: rgb(61, 135, 255);
+  margin: 1rem;
+  padding: 12px;
+  border-radius: 0.5rem;
+  text-align: left;
+}
+
+ul {
+  padding: 10px 1rem;
+}
+
+.cards > ul {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  grid-gap: 1rem;
+}
+
+.card-header,
+.card-content {
+  max-height: 220px;
+  overflow: hidden;
+  position: relative;
 }
