--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,11 @@
   font-size: 1.5rem;
 }
 
+.header {
+  display: inline-block;
+  padding: 0 5px;
+}
+
 .card-container {
   background-color: rgb(61, 135, 255);
   margin: 1rem;
